add initial commit of job application form

--- a/main.html
+++ b/main.html
@@ -8,6 +8,48 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Job App form</h1>
+	<form action="" method="get">
+		<div class="name-div">
+			<label for="name">Name</label>
+			<input type="text" id="#name" name="name" required>
+		</div>
+		<div class="email-div">
+			<label for="email">Email</label>
+			<input type="email" name="email" id="#email">
+		</div>
+		<div class="gender-div">
+			<label for="gender">Gender</label>
+			<input type="radio" name="gender" id="#male" required>
+			<label for="gender">Male</label>
+			<input type="radio" name="gender" id="#female" required>
+			<label for="gender">Female</label>
+		</div>
+		<div id=#laptop>
+			<label for="laptop">Laptop Brands</label>
+			<input type="checkbox" name="asus" id="#laptop">
+			<label for="asus">Asus</label>
+			<input type="checkbox" name="hp" id="#laptop">
+			<label for="hp">Hp</label>
+			<input type="checkbox" name="apple" id="#laptop">
+			<label for="apple">Apple</label>
+		</div>
+		<div class="age">
+			<label for="age">Age</label>
+			<input type="number" name="age" id="#age" required>
+		</div>
+		<div class="dob">
+			<label for="dob">DOB</label>
+			<input type="date" name="dob" id="#dob" required>
+		</div>
+		<div class="password">
+			<label for="password">Password</label>
+			<input type="password" name="password" id="#password" required>
+		</div>
+		<div class="submit-btn">
+			<button type="submit">Submit</button>
+		</div>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
