--- a/main.html
+++ b/main.html
@@ -12,39 +12,39 @@
 	<form action="" method="get">
 		<div class="name-div">
 			<label for="name">Name</label>
-			<input type="text" id="#name" name="name" required>
+			<input type="text" id="name" name="name" required>
 		</div>
 		<div class="email-div">
 			<label for="email">Email</label>
-			<input type="email" name="email" id="#email">
+			<input type="email" name="email" id="email">
 		</div>
 		<div class="gender-div">
 			<label for="gender">Gender</label>
-			<input type="radio" name="gender" id="#male" required>
+			<input type="radio" name="gender" id="male" required>
 			<label for="gender">Male</label>
-			<input type="radio" name="gender" id="#female" required>
+			<input type="radio" name="gender" id="female" required>
 			<label for="gender">Female</label>
 		</div>
-		<div id=#laptop>
+		<div id=laptop>
 			<label for="laptop">Laptop Brands</label>
-			<input type="checkbox" name="asus" id="#laptop">
+			<input type="checkbox" name="asus" id="laptop">
 			<label for="asus">Asus</label>
-			<input type="checkbox" name="hp" id="#laptop">
+			<input type="checkbox" name="hp" id="laptop">
 			<label for="hp">Hp</label>
-			<input type="checkbox" name="apple" id="#laptop">
+			<input type="checkbox" name="apple" id="laptop">
 			<label for="apple">Apple</label>
 		</div>
 		<div class="age">
 			<label for="age">Age</label>
-			<input type="number" name="age" id="#age" required>
+			<input type="number" name="age" id="age" required>
 		</div>
 		<div class="dob">
 			<label for="dob">DOB</label>
-			<input type="date" name="dob" id="#dob" required>
+			<input type="date" name="dob" id="dob" required>
 		</div>
 		<div class="password">
 			<label for="password">Password</label>
-			<input type="password" name="password" id="#password" required>
+			<input type="password" name="password" id="password" required>
 		</div>
 		<div class="submit-btn">
 			<button type="submit">Submit</button>
