change method attribute to get

--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>Job App form</h1>
-	<form method="post">
+	<form method="get">
 		<div class="name-div">
 			<label for="name">Name</label>
 			<input type="text" id="name" name="name" required>
