--- a/main.html
+++ b/main.html
@@ -27,12 +27,11 @@
 		</div>
 		<div id=laptop>
 			<label for="laptop">Laptop Brands</label>
-			<input type="checkbox" name="asus" id="laptop">
-			<label for="asus">Asus</label>
-			<input type="checkbox" name="hp" id="laptop">
-			<label for="hp">Hp</label>
-			<input type="checkbox" name="apple" id="laptop">
-			<label for="apple">Apple</label>
+			<select name="laptop" id="laptop">
+				<option value="apple">Apple</option>
+				<option value="asus">Asus</option>
+				<option value="hp">HP</option>
+			</select>
 		</div>
 		<div class="age">
 			<label for="age">Age</label>
