--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>Job App form</h1>
-	<form method="get">
+	<form method="post">
 		<div class="name-div">
 			<label for="name">Name</label>
 			<input type="text" id="name" name="name" required>
@@ -25,7 +25,7 @@
 			<input type="radio" name="gender" id="female" required>
 			<label for="gender">Female</label>
 		</div>
-		<div id=laptop>
+		<div class="laptop">
 			<label for="laptop">Laptop Brands</label>
 			<select name="laptop" id="laptop">
 				<option value="apple">Apple</option>
