--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
 			<input type="email" name="email" id="email">
 		</div>
 		<div class="gender-div">
-			<label for="male">Gender</label>
+			<label for="gender">Gender</label>
 			<input type="radio" name="gender" id="male" required>
 			<label for="female">Male</label>
 			<input type="radio" name="gender" id="female" required>
