add required in the #email

--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 		</div>
 		<div class="email-div">
 			<label for="email">Email</label>
-			<input type="email" name="email" id="email">
+			<input type="email" name="email" id="email" required>
 		</div>
 		<div class="gender-div">
 			<label for="gender">Gender</label>
